# ChatA

./: BACKEND_SERVICE_ROUTING_FIX_REPORT.md  CHAT_FUNCTIONALITY_TEST_REPORT.md  CHAT_MESSAGE_DISPLAY_BUG_REPORT.md  CONSOLE_ERRORS_FIX_SUMMARY.md  DEPLOYMENT.md  DICTIONARY_BACKEND_FIX_COMPLETION_REPORT.md  DICTIONARY_FINAL_FIX_COMPLETION_REPORT.md  DICTIONARY_FIX_SUMMARY.md  FRONTEND_DATASOURCE_CREATION_SUCCESS_REPORT.md  Gemini.md  HOME_VUE_CONSOLE_ERRORS_FIX_COMPLETION.md  HOME_VUE_DATASOURCE_MULTISELECT_FIX.md  HOME_VUE_DATASOURCE_SINGLE_SELECT_COMPLETION.md  HOME_VUE_DATASOURCE_SINGLE_SELECT_FINAL_SUMMARY.md  HOME_VUE_DATASOURCE_SINGLE_SELECT_FIX.md  HOME_VUE_DATATABLE_API_IMPORT_FIX_FINAL.md  HOME_VUE_DATA_PREVIEW_AND_RELATION_FIX.md  HOME_VUE_DATA_TABLE_NO_DATA_FIX.md  HOME_VUE_DATA_TABLE_NO_DATA_FIX_COMPLETION.md  HOME_VUE_DATA_TABLE_PREVIEW_API_VERIFICATION_REPORT.md  HOME_VUE_DATA_TABLE_PREVIEW_FIX_FINAL_REPORT.md  HOME_VUE_FIX_COMPLETION_SUMMARY.md  HOME_VUE_FIX_FINAL_COMPLETION.md  HOME_VUE_FIX_PLAN.md  HOME_VUE_MULTI_TABLE_PREVIEW_API_FIX_COMPLETION.md  HOME_VUE_MULTI_TABLE_PREVIEW_DATA_UPDATE_FIX.md  HOME_VUE_MULTI_TABLE_PREVIEW_FIX_COMPLETION.md  IFLOW.md  MULTI_TABLE_PREVIEW_AND_RELATION_FIX_COMPLETION.md  MULTI_TABLE_PREVIEW_AND_RELATION_IMPROVEMENT.md  MULTI_TABLE_PREVIEW_COMPLETION_SUMMARY.md  NAVIGATION_MENU_FINAL_REMOVAL_COMPLETION_REPORT.md  NAVIGATION_MENU_REMOVAL_COMPLETION_REPORT.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  TASK_6_5_1_COMPLETION_SUMMARY.md  TASK_6_5_1_DIALOGUE_INTERFACE_TEST_GUIDE.md  TASK_6_5_2_COMPLETION_SUMMARY.md  (+11 more)
(+744 files in other folders)
